Add 404 responses to swagger documentation
